<resources>
    <string name="app_name">Instagram Clone</string>
    <!-- Google Login -->
    <string name="google_client_id">780080544635-f8smsau36d79qj66vqqnur66n2njhsd3.apps.googleusercontent.com</string>
    <!-- Facebook Login -->
    <string name="facebook_app_id">688546365905015</string>
    <string name="fb_login_protocol_scheme">fb688546365905015</string>
    <string name="facebook_client_token">8567ffa4fd977af129dbfb23f1cc74af</string>
    <!--  Sign In  -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">회원가입 또는 이메일로 로그인</string>
    <string name="signin_google">구글 로그인</string>
    <string name="signin_facebook">Facebook 로그인</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <!--  Bottom Navigation View  -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <!--  Account  -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <!--  Alarm  -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>
    <!--  Comment  -->
    <string name="send">Send</string>
    <!--  Add Photo  -->
    <string name="upload_image">사진 업로드</string>
    <string name="pick_image">사진 가져오기</string>
    <string name="hint_image_content">내용을 입력해주세요.</string>
    <string name="upload_success">사진 업로드 성공!</string>
    <string name="upload_fail">사진 업로드중 문제가 발생했습니다.</string>
    <!--  Toolbar  -->
    <string name="back">Back</string>
    <!--  etc  -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>